add news function (#4)
