# app/controllers/api/v1/newslines_controller.rb
@@ -1,0 +1,10 @@
+module Api
+  module V1
+    class NewslinesController < AuthentificateController
+      def show
+        result = Api::V1::Newsline::Show.call(current_user:, serializer: NewslineSerializer)
+        default_handler(result)
+      end
+    end
+  end
+end
