# app/interactors/api/v1/newsline/show.rb
@@ -1,0 +1,11 @@
+module Api
+  module V1
+    module Newsline
+      class Show < BaseInteractor
+        def call
+          context.status = :ok
+        end
+      end
+    end
+  end
+end
