# config/routes.rb
@@ -8,6 +8,8 @@ Rails.application.routes.draw do
 
       resources :users, only: :create
       resources :messages
+      resources :news
+      resource :newsline, only: :show
     end
   end
 end
